k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: amz-erp
  labels:
    app.kubernetes.io/part-of: amazon-erp
    environment: production
